braekdout yml update

--- a/.github/workflows/breakout.yml
+++ b/.github/workflows/breakout.yml
@@ -1,25 +1,43 @@
-name: GitHub Breakout
+name: generate breakout svg
 
 on:
   schedule:
-    - cron: '0 * * * *'   # runs every hour to refresh the game board
-  workflow_dispatch:       # allows manual run from Actions tab
+    - cron: "0 */24 * * *"
+  workflow_dispatch:
 
 jobs:
-  breakout:
+  generate-svg:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Play Breakout
-        uses: muesli/github-breakout@main
+      - name: generate SVG
+        uses: cyprieng/github-breakout@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          github_username: ${{ github.repository_owner }}
 
-      - name: Commit updated README
+      - name: Move generated SVGs to temp
+        run: |
+          mkdir -p /tmp/breakout-images
+          mv output/light.svg /tmp/breakout-images/breakout-light.svg
+          mv output/dark.svg /tmp/breakout-images/breakout-dark.svg
+
+      - name: Configure git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git commit -m "Update Breakout game" || echo "No changes to commit"
-          git push
+
+      - name: Commit and force-push SVGs to target branch
+        run: |
+          git checkout --orphan github-breakout
+          git rm -rf .
+          mkdir images
+          mv /tmp/breakout-images/* images/
+          git add images
+          git commit -m "chore: update GitHub breakout SVGs" || echo "No changes to commit"
+          git push --force origin github-breakout
